fixed spacing in gallery and spacing in mobile landing page

--- a/pages.css
+++ b/pages.css
@@ -19,8 +19,8 @@ nav a svg {
   transition: 300ms;
 }
 
-nav a svg:hover {
-  transform: scale(1.3);
+nav ul li:first-child a svg:hover {
+  transform: scale(1.2);
   fill: white;
 }
 
@@ -42,6 +42,9 @@ ul li {
   display: flex;
   justify-content: flex-start;
 }
+ul li:nth-child(2) {
+  margin-right: 20px;
+}
 
 ul li:first-child {
   margin-right: auto;
@@ -55,6 +58,23 @@ main {
 
 .scroll-section__info {
   justify-content:unset;
+}
+
+.info-hero img {
+  width: 100%;
+  height: auto;
+  max-width: 1000px;
+  transition: 300ms;
+}
+
+.info-hero img:hover {
+  border: transparent;
+  transform: scale(1.025);
+  transition: 200ms;
+}
+
+.info-hero {
+  padding: 10px;
 }
 
 @media screen and (max-width: 795px) {
@@ -77,6 +97,10 @@ main {
 
   nav ul {
     justify-content: space-around;
+  }
+
+  ul li:nth-child(2) {
+    margin-right: unset;
   }
 
   ul li:first-child {
